--- a/pages/index.html
+++ b/pages/index.html
@@ -3,21 +3,21 @@
 
 <head>
   <title>Darrik's Site</title>
-  <link rel="stylesheet" type="text/css" href="css/reset.css"/>
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/reset.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 
 <body>
 
   <header>
-    <h1>Class One Lab</h1>
+    <h1>Darrik Puetz</h1>
     <img />
     <nav>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Coding News</a></li>
               </ul>
             </nav>
   </header>
@@ -46,7 +46,7 @@
   <footer>
     &copy; 2019 Darrik
   </footer>
-  <script src="js/apps.js"> </script>
+  <script src="../js/app.js"> </script>
 </body>
 
 </html>
