--- a/pages/index.html
+++ b/pages/index.html
@@ -5,11 +5,9 @@
   <title>Darrik's Site</title>
   <link rel="stylesheet" type="text/css" href="../css/reset.css">
   <link rel="stylesheet" type="text/css" href="../css/style.css">
-
+  
 </head>
-
 <body>
-
   <header>
     <h1>Darrik Puetz</h1>
     <img />
@@ -23,22 +21,42 @@
   </header>
 
   <main>
-
-    <section>
-      Stuff About Me
-    </section>
+    <br>
 
     <div>
-      <span class="things">Random Stuff</span>
-      <span>Another Span</span>
+      <span class="things">This is me!</span>
+      <span></span>
     </div>
 
     <article>
-      <p>Experienced Help Desk Technician with a demonstrated history of working in a stressful environment. Skilled in Operations Management, Microsoft Word, IT Service Management, Remote Desktop, and Team Building. Strong information technology professional with a Bachelor of Science - BS focused in Information Technology from Southern New Hampshire University. CompTIA A+ certified 
-
+      <p>Hello, and welcome to my page. I create this website to properly demonstrate certain HTML, CSS, and Javascript I have been learning. 
     </p>
-
-      <p>Software developer with broad base of experience in technical support and operations. Fast worker able to resolve problems quickly, delivering high levels of customer satisfaction. Excellent knowledge of HTML and CSS.</p>
+    <br>
+      <p>Software developer with broad base of experience in technical support and operations. Fast worker able to resolve problems quickly, delivering high levels of customer satisfaction. Excellent knowledge of HTML and CSS.
+       </p>
+     <br>
+        <h2>
+      About Me:
+        </h2>
+      <p>I am from the great state of Iowa. (Go Hawks!) After Graduating from Cascade High School, I enlisted in the United States Army. I spent seven years in the army while also traveling to places like Kuwait, Korea, Afghanistan, Syria, Texas, and North Carolina. I maintained active in my studies attained my BS in Information Technology Management. I am married with one daughter that means the world to me.  My goals are to be a part of a great business with a chance to show my programming skills.
+       </p>
+       <br>
+       <h2>Education</h2>
+       <p>
+          Code Fellows | Seattle, WA 
+          Certificate Goes Here | 2019
+          
+          Southern New Hampshire University | Manchester, NH 
+          B.S. Information Technology | 2019 
+       </p>
+       <h2>Experiance</h2>
+       <br>
+       <ol>
+        <h3>U.S. Army | Help Desk Technician | Fort Bragg, NC | Feb. 2017 – June 2019</h3>
+        <p>Provided Tier 1 IT support to non-technical internal users personnel through desk side support services.
+        Answered support calls within [Number] seconds to minimize delays and subsequent abandoned calls. Provided on-call support for critical [Type] issues related to [Software] and [System]. 
+        Broke down and evaluated user problems using test scripts, personal expertise and probing questions. </p>
+      </ol>
     </article>
 
   </main>
