added unordered list

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,19 +43,22 @@
        <br>
        <h2>Education</h2>
        <p>
-          Code Fellows | Seattle, WA 
-          Certificate Goes Here | 2019
+          <ol>Code Fellows | Seattle, WA 
+              Certificate Goes Here | 2019</ol>
           
-          Southern New Hampshire University | Manchester, NH 
-          B.S. Information Technology | 2019 
+          <ol> New Hampshire University | Manchester, NH 
+          B.S. Information Technology | 2019 </ol>
        </p>
        <h2>Experiance</h2>
        <br>
        <ol>
-        <h3>U.S. Army | Help Desk Technician | Fort Bragg, NC | Feb. 2017 – June 2019</h3>
-        <p>Provided Tier 1 IT support to non-technical internal users personnel through desk side support services.
-        Answered support calls within [Number] seconds to minimize delays and subsequent abandoned calls. Provided on-call support for critical [Type] issues related to [Software] and [System]. 
-        Broke down and evaluated user problems using test scripts, personal expertise and probing questions. </p>
+        <li>U.S. Army | Help Desk Technician | Fort Bragg, NC | Feb. 2017 – June 2019</h3>
+        <ul>
+        <li>Provided Tier 1 IT support to non-technical internal users personnel through desk side support services.</li>
+        <li>support calls within [Number] seconds to minimize delays and subsequent abandoned calls.</li> 
+        <li>Provided on-call support for critical [Type] issues related to [Software] and [System]. </li>
+        <li>Broke down and evaluated user problems using test scripts, personal expertise and probing questions. </li>
+      </ul>
       </ol>
     </article>
 
