--- a/pages/index.html
+++ b/pages/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Darrik's Site</title>
-  <link rel="stylesheet" type="text/css" href="../css/reset.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   
 </head>
 <body>
@@ -47,6 +47,8 @@
     <div align="center">
         <hr size="2" width="100%" align="center"/>
     </div>
+    <p>I am from the great state of Iowa. (Go Hawks!) After Graduating from Cascade High School, I enlisted in the United States Army. I spent seven years in the army while also traveling to places like Kuwait, Korea, Afghanistan, Syria, Texas, and North Carolina. I maintained active in my studies attained my BS in Information Technology Management. I am married with one daughter that means the world to me.  My goals are to be a part of a great business with a chance to show my programming skills.
+    </p>
     <p>
         Software developer with broad base of experience in technical support and
         operations. Fast worker able to resolve problems quickly, delivering high
@@ -164,7 +166,7 @@
   <footer>
     &copy; 2019 Darrik
   </footer>
-  <script src="../js/app.js"> </script>
+  <script src="js/app.js"> </script>
 </body>
 
 </html>
