--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
               <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="#">Resume</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Coding News</a></li>
               </ul>
