--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Darrik's Site</title>
-  <link rel="stylesheet" type="text/css" href="../css/reset.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   
 </head>
 <body>
@@ -67,7 +67,7 @@
   <footer>
     &copy; 2019 Darrik
   </footer>
-  <script src="../js/app.js"> </script>
+  <script src="js/app.js"> </script>
 </body>
 
 </html>
